Fix: #AR-7515 Auth SDK upgrade v1.0.9

--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
 
     <div class="function_category">
       <hr>
-      <h2>Connect</h2>
-    
+      <h2>Plug-n-Play</h2>
 	    <div class="function_container">
 	      <div class="functions">
-		      <button id="Btn-Connect">Plug&Play</button>
+		      <button id="Btn-Connect">Connect</button>
 	      </div>
+            </div>
+      <hr>
+      <h2>Custom Login UI</h2>
+	    <div class="function_container">
 	      <div class="functions">
 		      <button id="Btn-Google">Google</button>
 	      </div>
@@ -51,8 +54,11 @@
 	      <div class="functions">
 		      <button id="Btn-Discord">Discord</button>
 	      </div>
-        <div class="functions">
-          <button id="Btn-Passwordless">Get Login Link</button>
+              <div class="functions">
+                <button id="Btn-Passwordless">Get Login Link</button>
+	            </div>
+              <div class="functions">
+                <button id="Btn-Passwordless-OTP">Passwordless OTP </button>
 	      </div>
 	    </div>
     <hr>
